# SecurePasswordManager

./: .gitignore  BROWSER_EXTENSION_GUIDE.md  Jenkinsfile  Jenkinsfile.release  README.md  TESTING_GUIDE.md  package-lock.json  package.json  postcss.config.cjs  tsconfig.json
browser-extension/: NATIVE_MESSAGING_DEBUG.md  README.md  background.js  content.js  injected.js  manifest.json  popup.html  popup.js
browser-extension/native-messaging-host/: com.passwordmanager.native.json  com.passwordmanager.native.linux.json
browser-extension/test/: credential_picker_preview.html  password_dialog_preview.html
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ConfirmDialog.tsx  NotificationSystem.tsx  PasswordForm.tsx  PasswordGenerator.tsx  PasswordList.tsx  SecurityAnalysis.tsx  SetupWizard.tsx  TOTPSetup.tsx  UnlockForm.tsx
src/services/: clipboardService.ts
src/utils/: breachChecker.ts  passwordAnalyzer.ts  passwordStrength.ts  tauriEnv.ts
tools/: generate-legal-bundle.mjs  sync-host.ps1
